--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lint:scss": "stylelint ./src/**/*.{vue,scss} --fix"
   },
   "dependencies": {
+    "@vue/composition-api": "1.0.0-beta.8",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -36,6 +38,11 @@
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "stylelint": "13.2.0",
+    "stylelint-config-recommended-scss": "4.2.0",
+    "stylelint-order": "4.0.0",
+    "stylelint-scss": "3.14.2",
+    "stylelint-webpack-plugin": "1.2.3",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   }
