--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@vue/composition-api": "1.0.0-beta.8",
     "core-js": "3.6.4",
+    "material-design-icons-iconfont": "^5.0.1",
+    "roboto-fontface": "*",
     "vue": "2.6.11",
     "vue-class-component": "7.2.2",
     "vue-property-decorator": "8.3.0",
     "vue-router": "3.1.5",
+    "vuetify": "^2.2.11",
     "vuex": "3.1.2"
   },
   "devDependencies": {
@@ -47,6 +50,8 @@
     "stylelint-scss": "3.14.2",
     "stylelint-webpack-plugin": "1.2.3",
     "typescript": "3.7.5",
-    "vue-template-compiler": "2.6.11"
+    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-template-compiler": "2.6.11",
+    "vuetify-loader": "^1.3.0"
   }
 }
