--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "vue-class-component": "7.2.2",
     "vue-property-decorator": "8.3.0",
     "vue-router": "3.1.5",
-    "vuetify": "^2.2.11",
+    "vuetify": "2.2.15",
+    "vuetify-dialog": "2.0.2",
+    "vuetify-toast-snackbar": "0.6.1",
     "vuex": "3.1.2"
   },
   "devDependencies": {
